Adding styles and responsivity to the Slides

--- a/src/components/common/SlideCard/styles.module.scss
+++ b/src/components/common/SlideCard/styles.module.scss
@@ -1,4 +1,42 @@
+@import '../../../../styles/colors.module.scss';
+
+.slide {
+    width: 280px;
+    height: 308px;
+    border: 1px solid $darkGray;
+    cursor: pointer;
+    transition: .4s;
+    margin: 0px 10px;
+
+    overflow: hidden;
+    text-overflow: clip;
+
+    &:hover {
+        border-color: $lightRed;
+        height: 335px;
+    }
+}
+
 .slideImg {
-    width: 300px;
+    width: 100%;
     height: 170px;
+}
+
+.slideTitle {
+    color: $white;
+    font-weight: bold;
+    padding: 8px 16px;
+}
+
+.slideDescription {
+    color: #ccc8c8;
+    font-size: 14px;
+    padding: 8px 16px;
+}
+
+@media (max-width: 300px) {
+    .slide {
+        width: 100%;
+        margin: 0px;
+    }
 }
