--- a/src/components/homeNoAuth/PresentationSection/styles.module.scss
+++ b/src/components/homeNoAuth/PresentationSection/styles.module.scss
@@ -23,25 +23,24 @@
 }
 
 .btnCta {
-    font-weight: bold;
-    background-color: transparent;
-    color: $white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-    padding: 14px 30px;
-    border: 2px solid $lightRed;
-    border-radius: 6px;
-    transition: .3s;
+    font-weight: bold !important;
+    background-color: transparent !important;
+    color: $white !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    gap: 25px !important;
+    padding: 14px 30px !important;
+    border: 2px solid $lightRed !important;
+    transition: .3s !important;
 
     .btnImg {
         width: 11px;
     }
 
     &:hover {
-        border-color: $darkRed;
-        color: $lightGray
+        border-color: $darkRed !important;
+        color: $lightGray !important;
     }
 }
 
@@ -73,7 +72,7 @@
     }
 
     .btnCta {
-        padding: 10px 25px;
+        padding: 10px 25px !important;
     }
 }
 
@@ -91,7 +90,7 @@
     }
 
     .btnCta {
-        font-size: 14px;
+        font-size: 14px !important;
     }
 }
 
@@ -109,7 +108,7 @@
     }
 
     .btnCta {
-        font-size: 12px;
+        font-size: 12px !important;
     }
 }
 
