--- a/styles/registerLogin.module.scss
+++ b/styles/registerLogin.module.scss
@@ -1,1 +1,87 @@
- @import './colors.module.scss';
+@import './colors.module.scss';
+
+.main {
+    background: linear-gradient(to bottom, #151515, #000000);
+}
+
+.formTitle {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.form {
+    width: 600px;
+    padding: 50px;
+    border: 1px solid $darkGray;
+    border-radius: 5px;
+    margin: 0px auto;
+}
+
+.label {
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 20px;
+}
+
+.input {
+    border-color: $darkGray !important;
+    background-color: transparent !important;
+    color: $white !important;
+
+    &::placeholder {
+        color: $lightGray !important;
+    }
+
+    &:focus {
+        background-color: transparent !important;
+        border-color: $lightGray !important;
+        color: $white !important;
+        box-shadow: none !important;
+    }
+}
+
+.inputName {
+    @extend .input;
+    text-transform: uppercase !important;
+
+    &::placeholder {
+        text-transform: none !important;
+    }
+}
+
+.formBtn {
+    display: block !important;
+    margin: 50px auto 0px auto !important;
+    border-color: $lightRed !important;
+    color: $white !important;
+
+    &:hover {
+        background-color: transparent !important;
+        color: $lightGray !important;
+        border-color: $darkRed !important;
+    }
+}
+
+@media (max-width: 770px) {
+    .formTitle {
+        font-size: 30px;
+    }
+
+    .form {
+        width: 95%;
+    }
+}
+
+@media (max-width: 575px) {
+    .form {
+        padding: 50px 20px;
+    }
+}
+
+@media (max-width: 450px) {
+    .formTitle {
+        font-size: 24px;
+        text-align: center;
+    }
+}
