--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -1,5 +1,15 @@
 @import './colors.module.scss';
 
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
+.gridContainer {
+    flex: 1 0 auto;
+    padding: 80px 0;
+}
+
 .header {
     background-color: #000;
 }
@@ -140,6 +150,11 @@
 .btnDiv {
     margin: auto 0;
     padding-top: 15px;
+}
+
+.footer {
+    background-color: #000;
+    padding: 2px 0;
 }
 
 @media (max-width: 991px) {
